Add channel for QEMU Agent

--- a/templates/host.xml
+++ b/templates/host.xml
@@ -62,5 +62,8 @@
       <target type='serial' port='0'/>
     </console>
     <graphics type="vnc" port="-1"/>
+    <channel type='unix'>
+      <target type='virtio' name='org.qemu.guest_agent.0'/>
+    </channel>
   </devices>
 </domain>
